tests/ui/closures/issue-82438-mut-without-upvar.stderr
error[E0596]: cannot borrow `c` as mutable, as it is not declared as mutable
  --> $DIR/issue-82438-mut-without-upvar.rs:27:27
   |
LL |     A.f(participant_name, &mut c);
   |                           ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
LL |     let mut c = |a, b, c, d| {};
   |         +++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
